--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
             margin: auto;
         }
 
+        textarea {
+            padding: 10px;
+        }
+
         input {
             padding: 10px;
             width: 300px;
@@ -39,6 +43,7 @@
 
         ul {
             list-style: none;
+            padding-left: 0;
             line-height: 1.5;
         }
 
@@ -108,7 +113,7 @@
     </div>
 
     <script>
-        const company = '65ae6167584fb28db3960535';
+        const company = '65ae6130584fb28db3960533';
         // szkoła = 65ae6130584fb28db3960533
         // szpital = 65ae6167584fb28db3960535
 
@@ -125,6 +130,8 @@
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ description: description, company: company})})
+
+                postForm.reset();
                 
                 document.getElementById('success').classList.remove('hidden');
 
@@ -134,7 +141,8 @@
             }
         };
 
-        document.querySelector('#post').addEventListener('submit', handlePost);
+        const postForm = document.querySelector('#post');
+        postForm.addEventListener('submit', handlePost);
 
         const handleDelete = (e) => {
             e.preventDefault();
@@ -145,6 +153,8 @@
                     method: 'DELETE',
                     headers: { 'Content-Type': 'application/json' }});
 
+                deleteForm.reset();
+
                 document.getElementById('deleted').classList.remove('hidden');
 
                 setTimeout(() => {
@@ -153,7 +163,8 @@
             }
         }
 
-        document.querySelector('#delete').addEventListener('submit', handleDelete);
+        const deleteForm = document.querySelector('#delete');
+        deleteForm.addEventListener('submit', handleDelete);
 
         const handlePut = (e) => {
             e.preventDefault();
@@ -165,6 +176,8 @@
                     method: 'PUT',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ status: status })});
+                
+                putForm.reset();
 
                 document.getElementById('updated').classList.remove('hidden');
 
@@ -174,7 +187,8 @@
             }
         }
 
-        document.querySelector('#put').addEventListener('submit', handlePut);
+        const putForm = document.querySelector('#put');
+        putForm.addEventListener('submit', handlePut);
 
         const seeReports = async () => {
             fetch('/reports')
@@ -199,7 +213,6 @@
         };
 
         document.getElementById('seeReports').addEventListener('click', seeReports);
-
     </script>
 </body>
 </html>
